[build-system]
requires = ['poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third-Party"
import_heading_firstparty = "First-Party"
import_heading_localfolder = "Local Folder"
line_length = 79
known_third_party = [""]
known_first_party = [""]
profile = "black"

[tool.poetry]
name = "python-development-environment"
version = "0.0.1"
description = "This is a standard tool set for use with developing Python Scripts in VSCode. It provides a an easy way to manage code and dependcies."
authors = ["name@example.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"
pydocstyle = "^6.3.0"
pylint = "^2.16.4"
pytest = "^7.2.2"
sphinx = "^6.1.3"

[tool.pydocstyle]
convention = "google"

[tool.pylint.basic]
good-names-rgxs = "^[_a-z][_a-z0-9]?$"

[tool.pylint.main]
py-version = "3.11"